tests/PHPStan/DependencyInjection/invalidIgnoreErrors/message-and-messages.neon
parameters:
	ignoreErrors:
		-
			message: '#One#'
			messages: ['#Two#']
